[tool.poetry]
name = "safetydance_test"
version = "0.1.0"
description = "A testing framework built upon the typesafe composition of steps."
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
safetydance = {git = "https://gitlab.com/openteams/safetydance.git"}
type-extensions = "^0.1.2"
pytest = "^6.2.2"

[tool.poetry.dev-dependencies]
pytest = "pytest-cov"
pytest-cov = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
